[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lebre"
version = "2.2.0"
description = "A Database Populator — generates random data to fill your project's tables."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Luiz F. P. Quirino", email = "luizfpq@gmail.com" },
]
keywords = ["database", "populator", "fake-data", "sql", "seed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/luizfpq/lebre"
Repository = "https://github.com/luizfpq/lebre"
Issues = "https://github.com/luizfpq/lebre/issues"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
lebre = "cli:main"

[tool.setuptools]
py-modules = ["cli", "table_maker", "table_populator"]

[tool.setuptools.packages.find]
include = ["generators*", "datasources*"]

[tool.setuptools.package-data]
datasources = ["*.txt"]


[project.optional-dependencies.dev]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
